--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-HI This is harry
-i am trying to do something special
-guys this is change
-new means new everything
-bkri eid
+This is vikash from his own world
+and he will take everything from you and you won't even notice.
