--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-This is vikash from his own world
-and he will take everything from you and you won't even notice.
-my first project without any video help
+hi vikash kaise ho
