--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-i am good thank you for asking what about you
+i am good thank you for asking what about you /
 i am also good it was a nice day in my life
